# cpputils

./: .gitignore  CMakeLists.txt
include/: array.hpp  bitmap.hpp  contig_multi_array.hpp
src/: bitmap.cpp  dummy.cpp
test/: CMakeLists.txt
test/src/: array_test.cpp  bitmap_test.cpp  contig_multi_array_test.cpp
